@@ -1,0 +1,1 @@
+.deps .libs *.lo *.la Makefile Makefile.in
